landing page skeleton

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
         <script src="assets/js/main.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     </head>
-    <body>        
+    <body>
+        <div class="container-fluid">
+            <div class="nav nav-bar">
+                <div class="brand-img"></div>
+                <div class="nav-links"></div>
+            </div>
+
+            <section class="video-hero">
+                <div class="mission">
+                    <h1 class="main-hero-text"></h1>
+                    <h3 class="sub-hero-text"></h3>
+                    <button class="play-hero-video"></button>
+                </div>
+                <div class="hero-float">
+                    <h1 class="main-hero-float"></h1>
+                    <div class="row concept-elements">
+                        <div class="concept-element"></div>
+                        <div class="concept-element"></div>
+                        <div class="concept-element"></div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
