add partner gallery

--- a/index.html
+++ b/index.html
@@ -177,12 +177,62 @@
                             <div class="sub-second-text">What are intergrated with the best of modern online education</div>
                         </div>
                     </div>
-                    <div class="gallery flex flex-row align-center">
-                        <div class="section gallery-container flex w-clearfix">
-                            <div class="partner" style="background-image: url(https://78.media.tumblr.com/337f27433c0dbf0481a06859f4927ca8/tumblr_p8b6bl7tfX1vgcx0qo4_540.png)"></div>
-                            <div class="partner" style="background-image: url(https://78.media.tumblr.com/a09a13044ccd471a2f4799cd6318a41e/tumblr_p8b6bl7tfX1vgcx0qo3_250.jpg)"></div>
-                            <div class="partner" style="background-image: url(https://78.media.tumblr.com/22a91ae695474c17cb22814301032af0/tumblr_p8b6bl7tfX1vgcx0qo2_540.png)"></div>
-                            <div class="partner" style="background-image: url(https://78.media.tumblr.com/b9cfab64fcb71e68702d8c40e3bd8d92/tumblr_p8b6bl7tfX1vgcx0qo1_540.png)"></div>
+                    <div class="gallery align-center">
+                        <div class="gallery-container">
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/khanacademy.jpg" alt="Khan Academy" class="card-img-top">
+                                    <div class="card-body grey">
+                                        <h6><a href="#">Khan Academy</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/udacity.png" alt="Udacity" class="card-img-top">
+                                    <div class="card-body">
+                                        <h6><a href="#">Udacity</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/linkedin.jpg" alt="LinkedIn Learning" class="card-img-top">
+                                    <div class="card-body">
+                                        <h6><a href="#">LinkedIn Learning</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/mva.jpg" alt="Microsoft Virtual Academy" class="card-img-top">
+                                    <div class="card-body">
+                                        <h6><a href="#">Microsoft Virtual Academy</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/coursera.png" alt="Coursera" class="card-img-top">
+                                    <div class="card-body">
+                                        <h6><a href="#">Coursera</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box">
+                                <div class="card border-0 transform-on-hover">
+                                    <img src="assets/img/edx.jpg" alt="EdX" class="card-img-top">
+                                    <div class="card-body">
+                                        <h6><a href="#">EdX</a></h6>
+                                        <p class="text-muted card-text">some random description text</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div>
