--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <img src="assets/img/preloader.svg" width="50"/>
         </div>
         <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation w-nav">
+            <a href="/" class="w-nav-brand">
+                <img src="assets/img/logo9.png" width="100" />
+            </a>
             <div class="container w-container">
-                <a href="/" class="w-nav-brand">
-                    <img src="assets/img/logo9.png" width="100" />
-                </a>
                 <nav role="navigation" class="nav-menu w-nav-menu">
-                    <a href="/" class="nav-link w-nav-link">Home</a>
+                    <a href="#home" class="nav-link w-nav-link">Home</a>
                     <a href="#about" class="nav-link w-nav-link">About</a>
                     <a href="#partners" class="nav-link w-nav-link">Partners</a>
                     <a href="#reviews" class="nav-link w-nav-link">Reviews</a>
@@ -41,17 +41,9 @@
                 </div>
             </div>
             <div class="div-block w-hidden-medium w-hidden-small w-hidden-tiny">
-                <div class="social-wrapper in-navigation">
-                    <a href="#" class="social-icon smaller-icon w-inline-block">
-                        <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7ed979432d43000114d0ec_font-awesome_4-7-0_facebook_100_0_222222_none.png" width="15"/>
-                    </a>
-                    <a href="#" class="social-icon smaller-icon w-inline-block">
-                        <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7ed979c79427000133066a_font-awesome_4-7-0_twitter_100_0_222222_none.png" width="15"/>
-                    </a>
-                    <a href="#" class="social-icon smaller-icon w-inline-block">
-                        <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7ed979432d43000114d0ed_font-awesome_4-7-0_instagram_100_0_222222_none.png" width="15"/>
-                    </a>
-                </div>
+                <nav role="navigation" class="nav-menu w-nav-menu">
+                    <a href="" class="nav-link w-nav-link">LogIn / SignUp</a>
+                </nav>
             </div>
         </div>
         <div class="content-wrapper top">
