--- a/index.html
+++ b/index.html
@@ -326,8 +326,7 @@
                     </div>
                 </div>
             </div>
-            
-        </div>        
+        </div>
         <div class="content-wrapper">            
             <div id="contact" data-w-id="ca1fb17f-0e76-27c6-36a6-6d14f3f24200" class="section gradient overflow">
                 <div class="container w-container">
@@ -376,10 +375,10 @@
                     <div class="w-col w-col-4">
                         <div class="footer-column-wrapper">
                             <a href="#home" class="w-inline-block">
-                                <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7f22a2432d43000114f961_logo-white.png" width="100" srcset="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7f22a2432d43000114f961_logo-white-p-500.png 500w, http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7f22a2432d43000114f961_logo-white-p-800.png 800w, http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7f22a2432d43000114f961_logo-white-p-1080.png 1080w, http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7f22a2432d43000114f961_logo-white.png 1394w" sizes="100px"/>
+                                <img src="assets/img/logo9.png" width="100" sizes="100px"/>
                             </a>
                             <div class="top-margin">
-                                <p class="paragraph-gray in-footer">We &#x27;re your lifelong learning partner, guiding you and motivating you through all your learning adventures.</p>
+                                <p class="paragraph-gray in-footer">We &#x27;re your lifelong learning partner,<br />guiding you and motivating you through all your learning adventures.</p>
                             </div>
                             <div class="top-margin">
                                 <div class="social-wrapper left">
@@ -402,10 +401,12 @@
                             <div class="top-margin">
                                 <a href="#home" class="link">Home</a>
                                 <a href="#about" class="link">About</a>
-                                <a href="#features" class="link">Features</a>
-                                <a href="#project" class="link">Portfolio</a>
-                                <a href="#team" class="link">Team</a>
+                                <a href="#partners" class="link">Partners</a>
+                                <a href="#reviews" class="link">Reviews</a>
                                 <a href="#contact" class="link">Contact</a>
+                                <a href="" class="link">LogIn</a>
+                                <br />
+                                <a href="" class="link">Privacy</a>
                             </div>
                         </div>
                     </div>
@@ -419,7 +420,7 @@
                                             <a href="/post/history-of-web-design" class="blog-post-wrapper w-inline-block">
                                                 <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a81a646c8f9df000181f36d/5a81c251a7e787000152469e_blog-2.jpg&quot;)" class="blog-post-photo"></div>
                                                 <div>
-                                                    <h4 class="blog-post-title">History of Web Design</h4>
+                                                    <h4 class="blog-post-title">Learning How To Learn</h4>
                                                     <p class="sub-testi-text in-blog-post">April 6, 2018</p>
                                                 </div>
                                             </a>
@@ -428,7 +429,7 @@
                                             <a href="/post/about-graphic-design" class="blog-post-wrapper w-inline-block">
                                                 <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a81a646c8f9df000181f36d/5a81c5adb79c3100018826b8_blog-5.jpg&quot;)" class="blog-post-photo"></div>
                                                 <div>
-                                                    <h4 class="blog-post-title">About Graphic Design</h4>
+                                                    <h4 class="blog-post-title">Notes To My Older Self</h4>
                                                     <p class="sub-testi-text in-blog-post">April 5, 2018</p>
                                                 </div>
                                             </a>
@@ -437,7 +438,7 @@
                                             <a href="/post/myths-about-design" class="blog-post-wrapper w-inline-block">
                                                 <div style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a81a646c8f9df000181f36d/5a81c3fb18a3aa00019cab60_blog-3.jpg&quot;)" class="blog-post-photo"></div>
                                                 <div>
-                                                    <h4 class="blog-post-title">Myths About Design</h4>
+                                                    <h4 class="blog-post-title">On Structured Learning</h4>
                                                     <p class="sub-testi-text in-blog-post">May 4, 2018</p>
                                                 </div>
                                             </a>
@@ -450,11 +451,7 @@
                 </div>
                 <div class="line-divider"></div>
                 <div class="align-center">
-                    <p class="copyright">
-                        © 2018 Aller by <a href="http://denibozo.com/" target="_blank" class="copyright-link">Deni Bozo</a>
-                        . Powered by <a href="https://webflow.com/" target="_blank" class="copyright-link">Webflow</a>
-                        . <a href="/licensing" class="copyright-link">Image Licensing</a>
-                    </p>
+                    <p class="copyright"> © 2018 | SparkLRN </p>
                 </div>
             </div>
         </footer>
