spark about concept

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="slider-wrapper">
                                 <h1 class="heading-white">SPARK LEARNING</h1>
                                 <div class="top-margin less">
-                                    <div class="sub-second-text white full">We &#x27;re your lifelong learning partner, <br /> guiding you and motivating you through all your learning adventures.</div>
+                                    <div class="sub-second-text white full">We are your learning partner <br /> guiding you and motivating you through all your learning adventures.</div>
                                 </div>
                                 <div class="top-margin">
                                     <a href="#" class="button w-button">Get Started</a>
@@ -123,7 +123,10 @@
                         <div class="features-center">
                             <i class="far fa-address-card fa-5x"></i>
                             <div class="services-top-text big">Register</div>
-                            <p class="paragraph-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
+                            <p class="paragraph-gray">Register for a Spark account.<br/>
+                                Link your favorite learning platforms with just one click, its so easy and we will still walk you through it<br/>
+                                <i class="fa fa-smile"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +136,13 @@
                         <div class="features-center">
                             <i class="far fa-calendar-check fa-5x"></i>
                             <div class="services-top-text big">Track</div>
-                            <p class="paragraph-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
+                            <p class="paragraph-gray">We automatically start tracking your learning progress on the linked platforms.
+                                <br/> From our open AI and experts, we give you combined insight on what works best and what doesn't for your learning, all
+                                personalized
+                                <br/>
+                                <a href="" target="blank_">Learn more</a><br/>
+                                <i class="fa fa-chevron-right"></i>
+                            </p>
                         </div>
                     </div>
                     <div class="left-part _2"></div>
@@ -145,7 +154,11 @@
                         <div class="features-center">
                             <i class="far fa-calendar-check fa-5x"></i>
                             <div class="services-top-text big">Track</div>
-                            <p class="paragraph-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
+                            <p class="paragraph-gray">We automatically start tracking your learning progress on the linked platforms.<br/>
+                                From our open AI and experts, we give you combined insight on what works best and what doesn't for your learning, all personalized<br/>
+                                <a href="" target="blank_">Learn more</a><br/>
+                                <i class="fa fa-chevron-right"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +169,9 @@
                         <div class="features-center">
                             <i class="fas fa-expand fa-5x"></i>
                             <div class="services-top-text big">Collaborate</div>
-                            <p class="paragraph-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare.</p>
+                            <p class="paragraph-gray">Invite friends and family to courses, join learning groups, mentor others or get mentored.<br/>
+                                We believe learning is a journey. Our job is to make that journey as fun as possible with friends.
+                            </p>
                         </div>
                     </div>
                 </div>
