consistent little nudges

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 personalized
                                 <br/>
                                 <a href="" target="blank_">Learn more</a><br/>
-                                <i class="fa fa-chevron-right"></i>
+                                <i class="fas fa-angle-double-right"></i>
                             </p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             <p class="paragraph-gray">We automatically start tracking your learning progress on the linked platforms.<br/>
                                 From our open AI and experts, we give you combined insight on what works best and what doesn't for your learning, all personalized<br/>
                                 <a href="" target="blank_">Learn more</a><br/>
-                                <i class="fa fa-chevron-right"></i>
+                                <i class="fas fa-angle-double-right"></i>
                             </p>
                         </div>
                     </div>
@@ -170,7 +170,8 @@
                             <i class="fas fa-expand fa-5x"></i>
                             <div class="services-top-text big">Collaborate</div>
                             <p class="paragraph-gray">Invite friends and family to courses, join learning groups, mentor others or get mentored.<br/>
-                                We believe learning is a journey. Our job is to make that journey as fun as possible with friends.
+                                We believe learning is a journey. Our job is to make that journey as fun as possible with friends<br/>
+                                <i class="fa fa-thumbs-up"></i>
                             </p>
                         </div>
                     </div>
