--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="align-center">
                         <a href="#about" class="arrow-down w-inline-block">
-                            <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7df214bc0c8000010fbb7d_arrow.svg" width="70"/>
+                            <img src="assets/img/arrow-down.svg" width="70"/>
                         </a>
                     </div>
                 </div>
@@ -337,10 +337,10 @@
                                 </div>
                             </div>
                             <div class="right-arrow w-slider-arrow-left">
-                                <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7ec3b0ee248c0001380afd_arrow-left.svg" width="200"/>
+                                <img src="assets/img/arrow-left.svg" width="200"/>
                             </div>
                             <div class="right-arrow w-slider-arrow-right">
-                                <img src="http://uploads.webflow.com/5a7d94ae2dbf1b0001dc27df/5a7ec3e3d2e04c0001f42fc9_arrow-right.svg"/>
+                                <img src="assets/img/arrow-right.svg"/>
                             </div>
                             <div class="slide-nav w-slider-nav w-round"></div>
                         </div>
