add contact section

--- a/index.html
+++ b/index.html
@@ -381,13 +381,11 @@
                         </div>
                         <div class="w-col w-col-1 w-col-stack"></div>
                         <div class="w-col w-col-6 w-col-stack w-hidden-medium w-hidden-small w-hidden-tiny">
-                            <div class="big-image in-div ">
-                                <!-- <div data-widget-latlng="40.2842164,-84.1554987" data-widget-zoom="18" data-disable-scroll="1" class="map w-widget w-widget-map"></div> -->
-                            </div>
+                            <div class="big-image in-div "></div>
                         </div>
                     </div>
                 </div>
-                <div data-w-id="b5f26f62-7454-9483-1e2e-eae8eacdf969" class="circle second"></div>
+                <!-- <div data-w-id="b5f26f62-7454-9483-1e2e-eae8eacdf969" class="circle second"></div> -->
             </div>
         </div>
         <footer class="footer">
