--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <body>
         <div id="app">
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="assets/js/main.js" type="text/javascript"></script>
         <script src="bundle.js"></script>
     </body>
 </html>
